Fix chinese display problem on safari

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -57,7 +57,7 @@
 
 body {
   background: #fff;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif，微软雅黑, "MicrosoftJhengHei";
   font-size: 18pt;
   font-weight: 300;
   line-height: 1.75em;
